[tool.poetry]
name = "fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Nate Allen <nallen@directionsresearch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
DateTime = "^4.5"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
